# playwright-bdd-automation

./: .gitignore  BEST_PRACTICES.md  CUSTOMIZATION.md  Makefile  README.md  SETUP.md  pyproject.toml
config/: config.toml  secrets.toml.example
features/api/: users_api.feature
features/integration/: user_journey.feature
features/steps/: api_steps.py  integration_steps.py  ui_steps.py
features/ui/: login.feature
src/: __init__.py
src/automation/: __init__.py
src/automation/api/: __init__.py
src/automation/aws/: __init__.py
src/automation/database/: __init__.py
src/automation/services/: __init__.py
src/automation/ui/: __init__.py
src/core/: __init__.py  base_client.py  base_endpoint.py  base_page.py  base_repository.py  config_loader.py  enums.py  exceptions.py
src/fixtures/: __init__.py  conftest.py
src/framework/: __init__.py
src/framework/core/: __init__.py  base_client.py  base_endpoint.py  base_page.py  base_repository.py  config_loader.py  context.py
src/framework/types/: __init__.py
src/framework/utils/: __init__.py  logger.py  retry.py
src/layers/: __init__.py
src/layers/api/: __init__.py  api_client.py
src/layers/api/clients/: __init__.py
src/layers/api/endpoints/: __init__.py  example_endpoints.py
src/layers/aws/: __init__.py  aws_client.py
src/layers/aws/services/: __init__.py  s3_service.py
src/layers/database/: __init__.py  database_client.py
src/layers/database/repositories/: __init__.py  user_repository.py
src/layers/ui/: __init__.py  ui_client.py
src/layers/ui/components/: __init__.py  ui_components.py
src/layers/ui/locators/: __init__.py  base_locator.py
src/layers/ui/pages/: __init__.py  dashboard_page.py  login_page.py
src/services/: __init__.py  user_service.py
src/utils/: __init__.py  logger.py  retry.py
tests/: conftest.py
