[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "python-bdd-automation"
version = "1.0.0"
description = "Extensible Multi-Type Test Automation Framework (UI, API, DB, AWS)"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

# Core dependencies
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "pytest-bdd>=6.1.1",
    "pytest-xdist>=3.5.0",  # For parallel execution
    "pytest-html>=4.1.1",
    "allure-pytest>=2.13.2",
    "pydantic>=2.5.0",  # Data validation
    "pydantic-settings>=2.1.0",  # For config management
    "python-dotenv>=1.0.0",  # Environment variables
    "tomli>=2.0.1",  # TOML parsing (for Python < 3.11)
    "faker>=20.0.0",  # Test data generation
    "sqlalchemy>=2.0.0",  # ORM for DB layer
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver (optional)
    "boto3>=1.29.0",  # AWS SDK (optional)
    "loguru>=0.7.2",  # Advanced
    "retry>=0.9.2",  # Retry decorator
]

[tool.pdm]
version = {source = "file", path = "pyproject.toml"}

[tool.pytest.ini_options]
testpaths = ["features", "tests"]
python_files = ["test_*.py", "conftest.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "ui: Mark test as UI automation",
    "api: Mark test as API automation",
    "database: Mark test as database automation",
    "aws: Mark test as AWS automation",
    "integration: Mark test as integration (multiple automation types)",
    "slow: Mark test as slow running",
    "smoke: Mark test as smoke test",
    "regression: Mark test as regression test",
]
addopts = "-v --tb=short --strict-markers"
bdd_strict = true
bdd_strict_gherkin = false
asyncio_mode = "auto"

[tool.pytest.ini_options.log_cli]
level = "INFO"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pylint]
max-line-length = 100
